--- a/app/student/students.list.html
+++ b/app/student/students.list.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 
+<!--
 <ul>
     <li>FN: John, LN: Smith</li>
     <li>FN: Jack, LN: Doe</li>
@@ -13,6 +14,34 @@
     <li>FN: Johanna, LN: Knight</li>
     <li>FN: Gyo, LN: No</li>
 </ul>
+-->
+
+<table>
+    <tr>
+        <th>Last Name</th>
+        <th>First Name</th>
+    </tr>
+    <tr>
+        <td>John</td>
+        <td>Smith</td>
+    </tr>
+    <tr>
+        <td>Jack</td>
+        <td>Doe</td>
+    </tr>
+    <tr>
+        <td>Mary</td>
+        <td>Obama</td>
+    </tr>
+    <tr>
+        <td>Johananna</td>
+        <td>Knight</td>
+    </tr>
+    <tr>
+        <td>Gyo</td>
+        <td>No</td>
+    </tr>
+</table>
 
 </body>
 </html>
