--- a/app/address/address.list.html
+++ b/app/address/address.list.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title>Addresses</title>
 </head>
-<body>
-
+<thead>
+<!--
 <table>
     <thead>
     <tr>
@@ -23,7 +23,32 @@
         <td>ul. Krakowska 15, 33-100 Tarnów</td>
     </tr>
     </tbody>
-</table>
+</table>-->
+<thead>
+<tr>
+    <th>Id</th>
+    <th>Street</th>
+    <th>Street number</th>
+    <th>Postcode</th>
+    <th>City</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+    <td>1</td>
+    <td>ul. Bosmanska</td>
+    <td>1</td>
+    <td>81-116</td>
+    <td>Gdynia</td>
+</tr>
+<tr>
+    <td>2</td>
+    <td>ul. Krakowska</td>
+    <td>15</td>
+    <td>33-100</td>
+    <td>Tarnów</td>
+</tr>
+</tbody>
 
 </body>
 </html>
