--- a/app/products.html
+++ b/app/products.html
@@ -6,6 +6,9 @@
 </head>
 <body>
 <ul>
+    <li>apple</li>
+    <li>jam</li>
+    <li>bread</li>
     <li>Milk</li>
     <li>Apples</li>
     <li>Butter</li>
